v1.6.0/_sources/api/generated/pywr.recorders.NumpyArrayLevelRecorder.rst.txt
pywr.recorders.NumpyArrayLevelRecorder
======================================

.. currentmodule:: pywr.recorders

.. autoclass:: NumpyArrayLevelRecorder

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~NumpyArrayLevelRecorder.__init__
      ~NumpyArrayLevelRecorder.after
      ~NumpyArrayLevelRecorder.aggregated_value
      ~NumpyArrayLevelRecorder.before
      ~NumpyArrayLevelRecorder.finish
      ~NumpyArrayLevelRecorder.load
      ~NumpyArrayLevelRecorder.register
      ~NumpyArrayLevelRecorder.reset
      ~NumpyArrayLevelRecorder.setup
      ~NumpyArrayLevelRecorder.to_dataframe
      ~NumpyArrayLevelRecorder.unregister
      ~NumpyArrayLevelRecorder.values
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NumpyArrayLevelRecorder.agg_func
      ~NumpyArrayLevelRecorder.children
      ~NumpyArrayLevelRecorder.comment
      ~NumpyArrayLevelRecorder.data
      ~NumpyArrayLevelRecorder.epsilon
      ~NumpyArrayLevelRecorder.ignore_nan
      ~NumpyArrayLevelRecorder.is_constraint
      ~NumpyArrayLevelRecorder.is_objective
      ~NumpyArrayLevelRecorder.model
      ~NumpyArrayLevelRecorder.name
      ~NumpyArrayLevelRecorder.node
      ~NumpyArrayLevelRecorder.parents
      ~NumpyArrayLevelRecorder.temporal_agg_func
   
   